# ResultWorthy

./: .gitignore  LICENSE  README.md  ResultWorthy.cabal  main.hs
ResultWorthy/: ArgumentParser.hs  DataTypes.hs  Parsers.hs  Renderer.hs  Runner.hs  SwiftParsers.hs  SwiftRenderer.hs  Transforms.hs  Util.hs
ResultWorthy/Tests/: Integration.hs  Renderer.hs  SwiftParsers.hs  Util.hs
ResultWorthy/Tests/Fixtures/: FoundationHeader.swift  SimpleBody.swift
