name:                ResultWorthy
version:             0.1.0.0
synopsis:            ResultWorthy parses .swift files and can do things with the.
description:         ResultWorthy parses .swift files and can do things with the.
homepage:            https://github.com/lawrencelomax/ResultWorthy
license:             BSD3
license-file:        LICENSE
author:              Lawrence Lomax
maintainer:          Lawrence Lomax - lomax.lawrence@gmail.com
copyright:           Lawrence Lomax - lomax.lawrence@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable ResultWorthy
  main-is:             Main.hs
  build-depends:       base >= 4.8 && < 5,
                       directory >= 1.2,
                       mtl >=2.2 && <2.3,
                       parsec >=3.1 && <3.2, 
                       optparse-applicative >=0.11.0.1,
                       pretty >=1.1.1.1,
                       wl-pprint-extras >= 3.5.0.4,
                       transformers >=0.4.2,
                       HUnit >=1.2
  default-language:    Haskell2010
